Fix not visible transparency pattern on non-fixed pickr container

--- a/src/scss/pickr.scss
+++ b/src/scss/pickr.scss
@@ -109,6 +109,7 @@
         transition: all 0.15s;
         overflow: hidden;
         background: transparent;
+        z-index: 1;
         @include transparency-background(6px);
 
         &::after {
